[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/DoorSpawnSystem.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/wall.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/mainFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/audio/finishFight.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "showFightText"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/FightText:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00277556, 0.0360823, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/FightText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.0638378, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="DoorSpawnSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="EntryDoor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="ClosedUp" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CloseUpSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FightText" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -7.0
margin_right = 512.0
margin_bottom = 7.0
custom_colors/font_color = Color( 1, 0.352941, 0.352941, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Start Fight"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/showFightText = SubResource( 1 )

[node name="finishAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[connection signal="body_entered" from="EntryDoor" to="." method="_on_EntryDoor_body_entered"]
